--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
         body {
             background-color: bisque;
         }
+
+        footer {
+            text-align: center;
+            color: aliceblue;
+        }
     </style>
 </head>
 <body>
