--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 <body>
     <h1>Strona MarcinB</h1>
-    <footer><p>WSB 2022</p></footer>
+    <footer><p>WSB 2022</p>
+    <p>Autor: MarcinB</p></footer>
 </body>
 </html>
