--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 </head>
 <body>
     <h1>Strona MarcinB</h1>
+    <p>To jest tresc strony</p>
     <footer><p>WSB 2022</p>
     <p>Autor: MarcinB</p></footer>
 </body>
