dodano odniesienie Lorem Ipsum

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 <body>
     <h1>Strona MarcinB</h1>
     <p>To jest tresc strony</p>
+    <a href="https://www.lipsum.com/" target="_blank">Lorem ipsum</a>
     <footer><p>WSB 2022</p>
     <p>Autor: MarcinB</p></footer>
 </body>
